--- a/src/styles/page.styl
+++ b/src/styles/page.styl
@@ -1,16 +1,11 @@
 @require "constants.styl"
 
-logo-height = 55px
-logo-width = 180px
-logo-padding = 15px
-
 *
     box-sizing border-box
 
 #app
     opacity 0
     transition all 200ms ease
-    height "calc(100vh - %s)" % logo-height
     width 100%
 
 @font-face
@@ -33,12 +28,7 @@ body
 
         background-color transparent
         background-image none
-        img.wolf
-            position fixed
-            right 20px
-            bottom 20px
-            z-index -1
-            height 400px
+
         header.lite
             height logo-height
             line-height logo-height
