--- a/src/styles/popupMessages.styl
+++ b/src/styles/popupMessages.styl
@@ -20,6 +20,7 @@ borderRadius = 2px
     width messageWidth
     z-index 1000
     .popup-message
+        overflow-x hidden
         margin-bottom indent
         padding innerPadding
         border-radius borderRadius
